syntax = "proto3";

package jo;

message kdf {
    enum HashAlg {
        SHA256 = 0;
        SHA512 = 1;
        SHA3_224 = 2;
        SHA3_256 = 3;
        SHA3_384 = 4;
        SHA3_512 = 5;
    };

    bytes salt = 1;
    bytes key = 2;
    int64 key_len = 3;
    int64 iter = 4;
    HashAlg alg = 5;
}
